--- a/r4babs1/week-6/overview.qmd
+++ b/r4babs1/week-6/overview.qmd
@@ -4,6 +4,8 @@ title: "Week 6: Understanding file systems"
 
 This week you will carry out some independent study to ensure you have some understanding of computer file systems. We will introduce you to the concepts of paths and working directories.
 
+![Allison Horst cartoon "code gets the blame"](images/code_gets_the_blame.jpg){fig-alt="A charactered has slipped on a banana skin and is blaming the code character but the real culprits, holding bananas, are mismanaged files, navigating your computing and typos"}
+
 ### Learning objectives
 
 -   File systems
@@ -22,15 +24,15 @@ This week you will carry out some independent study to ensure you have some unde
 
 ### Instructions
 
-1.  Prepare
+1.  [Prepare](study_before_workshop.qmd)
 
-    i.  
+    i.  Watch an Introduction to Data Analysis in R for BABS 1 - 4
 
-    ii. 
+    ii. Read
 
-2.  Workshop
+2.  [Workshop](workshop.qmd)
 
-3.  Consolidate
+3.  [Consolidate](study_after_workshop.qmd)
 
     i.  
 
