--- a/r4babs1/week-7/overview.qmd
+++ b/r4babs1/week-7/overview.qmd
@@ -2,7 +2,7 @@
 title: "Week 7: Introduction to R, RStudio and project organisation"
 ---
 
-This week you will start writing R code in RStudio and will create your your graph! You will learn about data types such as "numerics" and "characters" and some of the different types of objects in R such as "vectors" and "dataframes". These are the building blocks for the rest of your R journey. You will also learn a workflow and about the layout of RStudio and using RStudio Projects.
+This week you will start writing R code in RStudio and will create your first graph! You will learn about data types such as "numerics" and "characters" and some of the different types of objects in R such as "vectors" and "dataframes". These are the building blocks for the rest of your R journey. You will also learn a workflow and about the layout of RStudio and using RStudio Projects.
 
 ### Learning objectives
 
@@ -22,15 +22,15 @@ This week you will start writing R code in RStudio and will create your your gra
 
 ### Instructions
 
-1.  Prepare
+1.  [Prepare](study_before_workshop.qmd)
 
-    i.  
+    i.  xxxx
 
-    ii. 
+    ii. xxx
 
-2.  Workshop
+2.  [Workshop](workshop.qmd)
 
-3.  Consolidate
+3.  [Consolidate](study_after_workshop.qmd)
 
     i.  
 
