add to-dos and attmep to fix json lite error

--- a/r4babs1/week-7/workshop.qmd
+++ b/r4babs1/week-7/workshop.qmd
@@ -22,6 +22,7 @@ FIXME
 - consider adding a scatter plot
 - add an important box for package loading and installing
 - put key in a box not
+- fix the keyboard shortcut characters
 
 # Introduction
 
