--- a/references.bib
+++ b/references.bib
@@ -16,3 +16,20 @@
 	volume = {4},
 	doi = {10.21105/joss.01686}
 }
+
+@book{allaire2022,
+	title = {Quarto},
+	author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	doi = {10.5281/zenodo.5960048},
+	url = {https://github.com/quarto-dev/quarto-cli},
+	note = {DOI: 10.5281/zenodo.5960048}
+}
+
+@misc{1.membershipofworkinggroup2.termsofreference,
+	title = {Report of the DORA working group},
+	author = {1. Membership of Working Group 2. Terms of reference, },
+	url = {https://www.imperial.ac.uk/media/imperial-college/research-and-innovation/public/DORA-working-group-recommendations-2017.pdf}
+}
