--- a/r4babs1/week-6/study_before_workshop.qmd
+++ b/r4babs1/week-6/study_before_workshop.qmd
@@ -2,4 +2,10 @@
 title: "Independent Study - before the workshop"
 ---
 
-Prepare banner
+1.  Prepare
+
+    i.  Watch an Introduction to Data Analysis in R for BABS 1 - 4
+
+    ii. Read [What they forgot to teach you about computers](https://3mmarand.github.io/comp4biosci/what_they_forgot.html) in [Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/)
+
+    iii. Read [What are R and Rstudio?](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#what-are-r-and-rstudio)
