--- a/r4babs1/week-8/workshop.qmd
+++ b/r4babs1/week-8/workshop.qmd
@@ -51,6 +51,17 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 # Exercises
 
+TO INCLUDE: the workshop example in week 9 needs to align with the river practicals:
+3 treatments 0 upstream, discharge point, downstream
+6 samples from each point
+Several groups will work on 1 sample: these are the technical reps
+Class data will be analysed: students will enter data into a google sheet/form? with cell validation. 
+Emma will download, average over the technical reps and make available: 3 treatments x 6 reps
+responses: nitrate, phosphate, bacterial counts, algal count, microplastic count, oestrogen, presence/absence of a plasmid
+
+
+
+
 <!-- ## 🐈 Coat colour of cats -->
 
 <!-- ### The goal -->
