--- a/r4babs1/week-6/workshop.qmd
+++ b/r4babs1/week-6/workshop.qmd
@@ -1,9 +1,11 @@
 ---
 title: "Workshop"
+toc: true
+toc-location: left
 ---
 
 There is no formal workshop this week but yu might want to install R and RStudio on your own machine. This is optional because University computers already have R and RStudio installed.
 
-[Install R and RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#installing-r-and-rstudio). 
+[Install R and RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#installing-r-and-rstudio).
 
 Note you need a computer - not a tablet.
