--- a/r4babs1/week-7/study_before_workshop.qmd
+++ b/r4babs1/week-7/study_before_workshop.qmd
@@ -4,10 +4,10 @@ title: "Independent Study - before the workshop"
 
 1.  Prepare
 
-    i.  **Either** read [First Steps in RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html) in **OR** watch
+    i.  **Either** 📖 Read [First Steps in RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html) in **OR** 📹 Watch
 
     {{< video videos/Data_Structures_and_functions.mp4 >}}
 
     {{< video videos/Getting_started_with_Rstudio.mp4 >}}
 
-    ii. Read [Workflow in RStudio](https://3mmarand.github.io/comp4biosci/workflow_rstudio.html)
+    ii. 📖 Read [Workflow in RStudio](https://3mmarand.github.io/comp4biosci/workflow_rstudio.html)
