--- a/r4babs1/week-7/workshop.qmd
+++ b/r4babs1/week-7/workshop.qmd
@@ -1,5 +1,7 @@
 ---
 title: "Introduction to RStudio and your first graphs"
+toc: true
+toc-location: left
 ---
 
 ```{r}
@@ -144,25 +146,25 @@ sum(freq)
 
 Commands like `c()`, `sum()`, and `str()` are in packages which are part the 'base' R system. A package is a collection of related commands. Base packages are installed automatically when you install R.
 
-Other packages, such as `ggplot2` @ggplot2 need to be installed once and then loaded each session. `ggplot2` is one of the `tidyverse` @tidyverse packages.
+Other packages, such as **`ggplot2`** @ggplot2 need to be installed once and then loaded each session. **`ggplot2`** is one of the **`tidyverse`** @tidyverse packages.
 
 ::: callout-important
 ## Important
 
-If you are working on a University computer (or the VDS) you *do not* need to install `tidyverse`.
+If you are working on a University computer (or the VDS) you *do not* need to install **`tidyverse`**.
 
-If you are working on your own computer or using RStudio cloud you *do* need to install `tidyverse`.
+If you are working on your own computer or using RStudio cloud you *do* need to install **`tidyverse`**.
 :::
 
 To install a package:
 
-![](images/do_in_R.png) Go the Packages tab on the lower right pane. Click Install and type `tidyverse` into the box that appears.
+![](images/do_in_R.png) Go the Packages tab on the lower right pane. Click Install and type **`tidyverse`** into the box that appears.
 
 Wait until you get the prompt back. It will take a few moments, be patient!
 
 To use a package which is installed you have to load it with the `library()` function. You will need to do this whether you are working on your own computer or on a University computer
 
-![](images/do_in_R.png) Load the `tidyverse`:
+![](images/do_in_R.png) Load the **`tidyverse`**:
 
 ```{r}
 #| eval: false
@@ -249,6 +251,8 @@ The manual page has several sections.
 
 ## Customising the plot
 
+### Bar colour
+
 ![](images/do_in_R.png) Change the fill of the bars using `fill`:
 
 ```{r}
@@ -305,12 +309,16 @@ ggplot(data = coat_data,
            colour = "black")
 ```
 
+### Changing the axes
+
 We can make changes to the axes using:
 
 -   Changes to a discrete x axis: `scale_x_discrete()`
 -   Changes to a continuous y axis: `scale_y_continuous()`
 
 `ggplot` automatically extends the axes slightly. You can turn this behaviour off with the `expand` argument in `scale_x_discrete()` and `scale_y_continuous()`.[^1]
+
+[^1]: There are also `scale_x_continous()` and `scale_y_discrete()` functions when you have those types of variable
 
 ![](images/do_in_R.png) Remove the gap between the axes and the data:
 
@@ -368,7 +376,11 @@ ggplot(data = coat_data, aes(x = coat, y = freq)) +
 
 ```
 
+### Getting rid of the grey background
+
 The grey grid background is useful for examining plots on a screen but for a report of publication you will want a more scientific style. Every aspect of the "theme" of a plot - the non-data elements such as fonts, background colours, axis line colours etc - can be controlled individually[^2] but there are some handy built in themes that apply several changes at once. One of these is `theme_classic()`
+
+[^2]: [Modify components of a theme](https://ggplot2.tidyverse.org/reference/theme.html)
 
 ![](images/do_in_R.png) Add `theme_classic()` to the plot:
 
@@ -386,6 +398,8 @@ ggplot(data = coat_data, aes(x = coat, y = freq)) +
 
 
 ```
+
+### Changing the order of bars
 
 The default ordering of a categorical variable like `coat` is alphabetical. Often we want to change the order. For example, you might want a "Control" on the left or the categories might have an inherent order (e.g., small, medium and large). We can alter (`mutate`) the `coat` variable using `fct_relevel()`.
 
@@ -459,12 +473,8 @@ You're finished!
 
 These contain all the code needed in the workshop even where it is not visible on the webpage.
 
-The [.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-7/workshop.qmd).
+The [.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-7/workshop.qmd).Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---CODING ANSWER---`
 
 Pages made with Quarto [@allaire2022]
 
 # References
-
-[^1]: There are also `scale_x_continous()` and `scale_y_discrete()` functions when you have those types of variable
-
-[^2]: [Modify components of a theme](https://ggplot2.tidyverse.org/reference/theme.html)
