--- a/r4babs1/week-8/workshop.qmd
+++ b/r4babs1/week-8/workshop.qmd
@@ -1,5 +1,7 @@
 ---
 title: "Types of variable, the normal distribution and summarising data"
+toc: true
+toc-location: left
 ---
 
 ```{r}
@@ -13,6 +15,8 @@ library(kableExtra)
 ![Continuous and Discrete](images/continuous_discrete-01.png){fig-alt="One the left: Continuous data - measures that can have possible infinite values within its range. A cute chick labelled I am 3.1 inches tall, I weigh 34.16 grams. One the right: Discrete observations can only exist at limited values, often counts. A cute octopus labelled I have 8 legs and 4 spots"}
 
 ## Session overview
+
+In this workshop you will learn how to import data from files and create summaries and plots for it. You will also get more practice with working directories, formatting figures and the pipe.
 
 ## Philosophy
 
@@ -45,550 +49,357 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 ![](images/do_in_R.png) Make an RStudio project for this workshop by clicking on the drop-down menu on top right where it says `Project: (None)` and choosing New Project, then New Directory, then New Project. Name the RStudio Project 'week-8'.
 
-![](images/do_in_R.png) Make a new script then save it with a name like analysis.R to carry out the rest of the work.
+![](images/do_in_R.png) Make a new script then save it with a name like `analysis.R` to carry out the rest of the work.
 
 ![](images/do_in_R.png) Add a comment to the script: `# Types of variable, the normal distribution and summarising data`
 
 # Exercises
 
-TO INCLUDE: the workshop example in week 9 needs to align with the river practicals:
-3 treatments 0 upstream, discharge point, downstream
-6 samples from each point
-Several groups will work on 1 sample: these are the technical reps
-Class data will be analysed: students will enter data into a google sheet/form? with cell validation. 
-Emma will download, average over the technical reps and make available: 3 treatments x 6 reps
-responses: nitrate, phosphate, bacterial counts, algal count, microplastic count, oestrogen, presence/absence of a plasmid
+## Importing data from files
 
+Last week we created data [by typing the values in to R](r4babs1/week-7/workshop.html#creating-the-data). This is not practical when you have added a lot of data to a spreadsheet, or you are using data file that has been supplied to you by a person or a machine. Far more commonly, we import data from a file into R. This requires you know two pieces of information.
 
+1.  What format the data are in
 
+    The format of the data determines what function you will use to import it and the file extension often indicates format.
 
-<!-- ## 🐈 Coat colour of cats -->
+    -   `.txt` a plain text file[^1], where the columns are often separated by a space but might also be separated by a tab, a backslash or forward slash, or some other character
+    -   `.csv` a plain text file where the columns are separated by commas
+    -   `.xlsx` an Excel file
 
-<!-- ### The goal -->
+2.  Where the file is relative to your working directory
 
-<!-- We will work with some data on the coat colour of 62 cats. You are going to type data in R, summarise and plot it -->
+    `R` can only read in a file if you say where it is, i.e., you give its **relative path**. If you follow the advice in this course, your data will be in a folder, `data-raw` which is inside your Project folder (and working directory).
 
-<!-- The data are as a frequency table: -->
+[^1]: Plain text files can be opened in notepad or other similar editor and still be readable.
 
-<!-- ```{r} -->
+We will save the four files for this workshop to our Project folder (`week-8`) and read them in. We will then create a new folder inside our Project folder called `data-raw` and move the data files to there before modifying the file paths as required. This is demonstrate how the relative path to the file will change after we move it.
 
-<!-- #| echo: false -->
+![](images/do_on_your_computer.png) Save these four files in to your `week-8` folder
 
-<!-- coat <- c("black", "white", "tabby", "ginger", "tortoiseshell", "calico") -->
+-   The coat colour and mass of 62 cats: [cat-coats.csv](data-raw/cat-coats.csv)
+-   The relative size of over 5000 cells measure by forward scatter (FSC) in flow cytometry: [cell-size.txt](data-raw/cell-size.txt)
+-   The number of sternopleural bristles on 96 female *Drosophila*: [bristles.txt](data-raw/bristles.txt)
+-   The number of sternopleural bristles on 96 female *Drosophila* (with technical replicates): [bristles-mean.xlsx](data-raw/bristles-mean.xlsx)
 
-<!-- freq <- c(23, 15, 8, 10, 5, 1) -->
+The first three files can be read in with core `**tidyerse**` functions and the last can be read in with the `**readxl**` package.
 
-<!-- df <- data.frame(coat, freq) -->
+![](images/do_in_R.png) Load the two packages
 
-<!-- knitr::kable(df,  -->
+```{r}
+library(tidyverse)
+library(readxl)
+```
 
-<!--              table.attr = "style='width:30%;'", -->
+We will first read in `cat-coats.csv`. A `.csv.` extension suggests this is plain text file with comma separated columns. However, before we attempt to read it it, when should take a look at it. We can do this from RStudio
 
-<!--              caption = "Frequency of coat colours in 62 cats", -->
+![](images/do_in_R.png) Go to the Files pane (bottom right), click on the `cat-coats.csv` file and choose View File[^2]
 
-<!--              format = "html", -->
+[^2]: **Don't** be tempted to import data this way. Unless you are careful, your data import will not be scripted or will not be scripted correctly.
 
-<!--              col.names = c("Coat colour", "No. cats"), -->
+![RStudio Files Pane](images/rstudio-filepane-viewfile.png){fig-alt="Rstudio Files pane showing the data files and the View File option that appears when you click on the a particular file"}
 
-<!--              row.names = FALSE) |>   -->
+Any plain text file will open in the top left pane (Excel files will launch Excel).
 
-<!--   kable_styling() -->
+![](images/answer.png) Is the file csv?
 
-<!-- ``` -->
+<!-- #---THINKING ANSWER--- -->
 
-<!-- You will create a figure like this: -->
+<!-- Yes -->
 
-<!-- ```{r} -->
+![](images/answer.png) What kind of variables does the file contain?
 
-<!-- #| echo: false -->
+<!-- #---THINKING ANSWER--- -->
 
-<!-- coat_data <- data.frame(coat, freq) -->
+<!-- coat which is (discrete) nominal and mass which is continuous-->
 
-<!-- ggplot(data = coat_data,  -->
+![](images/do_in_R.png) Read in the csv file with:
 
-<!--        aes(x = reorder(coat, freq, decreasing = TRUE),  -->
+```{r}
+#| eval: false
+cats <- read_csv("cat-coats.csv")
+```
 
-<!--            y = freq)) + -->
+The data from the file a read into a dataframe called `cats` and you will be able to see it in the Environment.
 
-<!--   geom_col(colour = "black", fill = "lightblue", width = 1) + -->
+![](images/do_in_R.png) Click on each of the remaining files and choose View File.
 
-<!--   scale_x_discrete(name = "Coat colour", -->
+![](images/answer.png) In each case, say what the format is and what types of variables it contains.
 
-<!--                    expand = c(0, 0)) + -->
+<!-- #---THINKING ANSWER--- -->
 
-<!--   scale_y_continuous(name = "Number of cats", -->
+<!-- bristles.txt is a plain text file which contains a single variable, -->
 
-<!--                      expand = c(0, 0), -->
+<!-- numbers, which is an integer (so not continuous but might be a count) -->
 
-<!--                      limits = c(0, 25)) + -->
+<!-- cell-size-txt is a plain text file which contains a single variable, -->
 
-<!--   theme_classic() -->
+<!-- FSC, which are integers but the value is high so it might be possible -->
 
-<!-- ``` -->
+<!-- to treat as a count -->
 
-<!-- ## Creating the data -->
+<!-- bristles-mean.xlxs is an excel file with two variables: fly is an integer -->
 
-<!-- Start by making a vector called `coat` that holds coat colours -->
+<!-- from 1 to 96 and mean count seems to be continuous -->
 
-<!-- ![](images/do_in_R.png) Write the following in your script: -->
+We use the `read_table()`[^3] command to read in plain text files of single columns or where the columns are separated by spaces...
 
-<!-- ```{r} -->
+[^3]: note `read_csv()` and `read_table()` are the same functions with some different settings.
 
-<!-- # coat colours -->
+![](images/do_in_R.png) ...so in `cell-size.txt` can be read into a dataframe called `cells` like this:
 
-<!-- coat <- c("black", "white", "tabby", "ginger", "tortoiseshell", "calico") -->
+```{r}
+#| eval: false
+cells <- read_table("cell-size.txt")
+```
 
-<!-- ``` -->
+![](images/do_in_R.png) Now you try reading `bristles.txt` in to a dataframe called `fly_bristles`
 
-<!-- Remember, the shortcut for `<-` is Alt+- (hold the Alt key down then hit the minus key ). -->
+```{r}
+#| include: false
+#| eval: false
 
-<!-- Notice I have used a comment. Comment your code as much as possible! -->
+#---CODING ANSWER---
+fly_bristles <- read_table("bristles.txt")
+```
 
-<!-- ![](images/do_in_R.png) Ensure your cursor is on the line with the command and do Control+Enter to send the command to the console to be executed. -->
+The `**readxl**` package we loaded earlier has two useful functions for working with Excel files: `excel_sheets("filename.xlsx")` will list the sheets in an Excel workbook; `read_excel("filename.xlsx")` will read in to top sheet or a specified sheet with a small modification `read_excel("filename.xlsx", sheet = "Sheet1")`.
 
-<!-- ![](images/do_in_R.png) Examine the 'structure' of the `coat` object using `str()` -->
+![](images/do_in_R.png) List the the names of the sheets and read in the sheet with the data like this:
 
-<!-- ```{r} -->
+```{r}
+#| eval: false
+excel_sheets("bristles-mean.xlsx")
+fly_bristles_means <- read_excel("bristles-mean.xlsx", sheet = "means")
+```
 
-<!-- str(coat) -->
+Well done! You can now read read in from files in your working directory.
 
-<!-- ``` -->
+To help you understand relative file paths, we will now move the data files.
 
-<!-- It's vector of 6 character values, `chr` -->
+![](images/do_in_R.png) First remove the dataframes you just created to make it easier to see whether you can successfully read in the files from a different place:
 
-<!-- ![](images/do_in_R.png) Create a vector called `freq` containing the numbers of cats with each coat colour and examine it with `str()`. -->
+```{r}
+#| eval: false
+rm(cat_coats, fly_bristles, cells, flies_bristles_means)
+```
 
-<!-- ```{r} -->
+![](images/do_in_R.png) Now make a new folder called `data-raw`. You can do this on the Files Pane by clicking New Folder and typing into the box that appears.
 
-<!-- #| include: false -->
+![](images/do_in_R.png) Check the boxes next to the file names and choose More \| Move... and select the `data-raw` folder.
 
-<!-- #---CODING ANSWER--- -->
+![RStudio Files Pane](images/rstudio-filepane-move-files.png){fig-alt="Rstudio Files pane showing the boxes nest to the data files check and the pop-up menu with the Move... option"} The files will move. To import data from files in the `data-raw` folder, you need to give the relative path to the file from the working directory. The working directory is the Project folder, `week-8` so the relative path is `data-raw/cat-coats.csv`
 
-<!-- # numbers of cats with each coat colour -->
+![](images/do_in_R.png) Import the `cat-coats.csv` data like this:
 
-<!-- freq <- c(23, 15, 8, 10, 5, 1) -->
+```{r}
+cats <- read_csv("data-raw/cat-coats.csv")
+```
 
-<!-- str(freq) -->
+![](images/do_in_R.png) Now you do the other files.
 
-<!-- ``` -->
+```{r}
+#| include: false
 
-<!-- ![](images/do_in_R.png) Check `sum(freq)` gives the answer you expect: -->
+#---CODING ANSWER---
+cells <- read_table("data-raw/cell-size.txt")
+fly_bristles <- read_table("data-raw/bristles.txt")
+fly_bristles_means <- read_excel("data-raw/bristles-mean.xlsx")
+```
 
-<!-- ```{r} -->
+From this point forward in the course, we will always create a `data-raw` folder each time we make a new Project.
 
-<!-- # the total Number of cats -->
+These are the most common forms of data file you will encounter at first. However, data can certainly come to you in other formats particularly when they have come from particular software. Usually, there is an `R` package specially for that format.
 
-<!-- sum(freq) -->
+In the rest of the workshop we will take each dataset in turn and create summaries and plots appropriate for the data types. Data is summarised using the `group_by()` and `summarise()` functions
 
-<!-- ``` -->
+## Summarising discrete data: Cat coat
 
-<!-- ## Packages -->
+The most appropriate way to summarise nominal data like the colour of cat coats is to tabulate the number of cats with each colour.
 
-<!-- Commands like `c()`, `sum()`, and `str()` are in packages which are part the 'base' R system. A package is a collection of related commands. Base packages are installed automatically when you install R. -->
+![](images/do_in_R.png) Summarise the `cats` dataframe by counting the number of cats in each category
 
-<!-- Other packages, such as `ggplot2` @ggplot2 need to be installed once and then loaded each session. `ggplot2` is one of the `tidyverse` @tidyverse packages. -->
+```{r}
+cats |> 
+  group_by(coat) |> 
+  count()
+```
 
-<!-- ::: callout-important -->
+`|>` is the pipe and can be produced with Ctrl+Shift+M
 
-<!-- ## Important -->
+This sort of data might be represented with a barchart. You have two options for producing that barchart: 1. plot the summary table using `geom_col()`
 
-<!-- If you are working on a University computer (or the VDS) you *do not* need to install `tidyverse`. -->
+2.  plot the raw data using `geom_bar()`
 
-<!-- If you are working on your own computer or using RStudio cloud you *do* need to install `tidyverse`. -->
+colour of cats dplyr table bar chart
 
-<!-- ::: -->
+We did the first of these [last week](r4babs1/week-7/workshop.html#plotting-the-data-with-ggplot). The `geom_col()` function uses the numbers in a second column to determine how high the bars are. However, the `geom_bar()` function will do the tabulating for you.
 
-<!-- To install a package: -->
+![](images/do_in_R.png) Plot the coat data using `geom_bar`:
 
-<!-- ![](images/do_in_R.png) Go the Packages tab on the lower right pane. Click Install and type `tidyverse` into the box that appears. -->
+```{r}
+ggplot(cats, aes(x = coat)) +
+  geom_bar()
+```
 
-<!-- Wait until you get the prompt back. It will take a few moments, be patient! -->
+The gaps that `R` put automatically between the bars reflects that the coat colours are discrete categories.
 
-<!-- To use a package which is installed you have to load it with the `library()` function. You will need to do this whether you are working on your own computer or on a University computer -->
+## Summarising Counts: Bristles
 
-<!-- ![](images/do_in_R.png) Load the `tidyverse`: -->
+Counts are discrete and can be thought of a categories with an order (ordinal).
 
-<!-- ```{r} -->
+![](images/do_in_R.png) Summarise the `fly_bristles` dataframe by counting the number of flies in each category of bristle number
 
-<!-- #| eval: false -->
+```{r}
+#| include: false
 
-<!-- library(tidyverse) -->
+#---CODING ANSWER---
+fly_bristles |> 
+  group_by(number) |> 
+  count()
+```
 
-<!-- ``` -->
+Since counts are numbers, we might also want to calculate some summary statistics such as the median and interquartile range.
 
-<!-- You will likely be warned of some function name conflicts but these will not be a problem for you. -->
+![](images/do_in_R.png) Summarise the `fly_bristles` dataframe by calculate the median and interquartile range
 
-<!-- ## Plotting the data with `ggplot()` -->
+```{r}
+fly_bristles |> 
+  summarise(median(number),
+            IQR(number))
+```
 
-<!-- `ggplot()` takes a dataframe for an argument -->
+As the interquartile is `IQR(fly_bristles$number)` and the median is `median(fly_bristles$number)` then 25% flies have `median(fly_bristles$number) - IQR(fly_bristles$number)/2` bristles or fewer and 25% have `median(fly_bristles$number) + IQR(fly_bristles$number)/2` or more.
 
-<!-- We can make a dataframe of the two vectors, `coat` and `freq` usinf the `data.frame()` function. -->
+The distribution of counts\[\^4\] is not symmetrical for lower counts so the mean is not usually a good way to summarise count data. \[\^4\]: Count data are usually "Poisson" distributed.
 
-<!-- ![](images/do_in_R.png) Make a dataframe called `coat_data` -->
+![](images/do_in_R.png) If you want to save the table you created and give the columns better names you can make two adjustments:
 
-<!-- ```{r} -->
+```{r}
+fly_bristles_summary <- fly_bristles |> 
+  summarise(med = median(number),
+            interquartile = IQR(number))
+```
 
-<!-- coat_data <- data.frame(coat, freq) -->
+![](images/do_in_R.png) Plot the bristles data using `geom_bar`:
 
-<!-- ``` -->
+```{r}
+#| include: false
 
-<!-- `n` was made into a factor (a categorical variable) because there are only 6 values and I want to make a bar plot. -->
+#---CODING ANSWER---
+ggplot(fly_bristles, aes(x = number)) +
+  geom_bar()
+```
 
-<!-- ![](images/do_in_R.png) Check the structure of `coat_data` -->
+If counts have a a high mean and big range, like number of hairs on a person's head, then you can often treat them as continuous. This means you can use statistics like the mean and standard deviation to summarise them, histograms to plot them and use some standard statistical tests on them.
 
-<!-- ```{r} -->
+## Summarising continuous data
 
-<!-- #| include: false -->
+### Cat mass
 
-<!-- str(coat_data) -->
+cat mass - a a single variable histogram - effect of changing bins dplyr table mean, median,
 
-<!-- ``` -->
+![](images/do_in_R.png) We can find the mean mass with:
+```{r}
+cats |> 
+  summarise(mean = mean(mass))
+```
 
-<!-- Click on `coat_data` in the Environment to open a spreadsheet-like view of it. -->
+We can add any sort of summary by placing it inside the the summarise parentheses. Each one is separated by a comma. We did this to find the median and the interquatrile range for fly bristles.
 
-<!-- ## A barplot -->
+![](images/do_in_R.png) For example, another way to calculate the number of values is to use the `length()` function:
+```{r}
+cats |> 
+  summarise(mean = mean(mass),
+            n = length(mass))
+```
 
-<!-- ![](images/do_in_R.png) Create a simple barplot using `ggplot` like this: -->
+![](images/do_in_R.png) Adapt the code to calculate the mean, the sample size *and* the standard deviation (`sd()`)
 
-<!-- ```{r} -->
+```{r}
+#| include: false
 
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
+#---CODING ANSWER---
+cats |> 
+  summarise(mean = mean(mass),
+            n = length(mass),
+            standard_dev = sd(mass))
+```
 
-<!--   geom_col() -->
+A single continuous variable can be plotted using a histogram to show the shape of the distribution.
 
-<!-- ``` -->
+![](images/do_in_R.png) Plots a histogram of cats mass:
+```{r}
+ggplot(cats, aes(x = mass)) +
+  geom_histogram(bins = 10, colour = "black")
+```
 
-<!-- `ggplot()` alone creates a blank plot. -->
+Notice that there are no gaps between the bars which reflects that `mass` is continuous. `bins` determines how many groups the variable is divided up into (i.e., the number of bars) and `colour` sets the colour for the outline of the bars. A sample of 62 is a relatively small number of values for plotting a distribution and the number of bins used determines how smooth or normally distributed the values look.
 
-<!-- `ggplot(data = coat_data)` looks the same. -->
+![](images/do_in_R.png) Experiment with the number of bins. Does the number of bins affect how you view the distribution. 
 
-<!-- `aes()` gives the 'Aesthetic mappings'. How variables (columns) are mapped to visual properties (aesthetics) e.g., axes, colour, shapes. -->
+Next week we will practice summarise and plotting data files with several variables but just to give you a taste, we will find summary statistics about mass for each of the coat types.
+![](images/do_in_R.png) The `group_by()` function is used before the summarise() to do calculations for each of the coats:
+```{r}
+cats |> 
+  group_by(coat) |> 
+  summarise(mean = mean(mass),
+                  standard_dev = sd(mass))
+```
 
-<!-- Thus... -->
+You can read this as:
 
-<!-- `ggplot(data = coat_data, aes(x = coat, y = freq))` produces a plot with axes -->
+  > take cats *and then*
+  > group by coat *and then*
+  > summarise by finding the mean of mass and the standard deviation of mass
 
-<!-- `geom_col` A 'Geom' (Geometric object) gives the visual representations of the data: points, lines, bars, boxplots etc. -->
 
-<!-- Note that `ggplot2` is the name of the package and `ggplot()` is its most important command. -->
+![](images/answer.png) Why do we get an `NA` for the standard deviation of the calico cats?
 
-<!-- ## Using the help manual -->
+<!-- #---THINKING ANSWER--- -->
 
-<!-- 'Arguments' can be added to the `geom_col()` command inside the brackets. -->
+<!-- Because there is only one calico cat. The mean of a single value is that  -->
+<!-- value but there can be no average by which the values deviation from the mean. -->
 
-<!-- Commands do something and their arguments (in brackets) and can specify: -->
+### Cells
 
-<!-- -   what object to do it to\ -->
+![](images/do_in_R.png) Summarise the `cells` dataframe by calculating the mean, median, sample size and standard deviation of `FSC`. 
 
-<!-- -   how exactly to do it -->
+```{r}
+#| include: false
 
-<!-- Many arguments have defaults so you don't always need to supply them. -->
+#---CODING ANSWER---
+cells |> 
+  summarise(mean = mean(FSC),
+            meadian = median(FSC),
+            n = length(FSC),
+            standard_dev = sd(FSC))
+```
 
-<!-- ![](images/do_in_R.png) Open the manual page for `geom_col()` using: -->
+![](images/do_in_R.png) Add a column for the standard error which is given by $\frac{s.d.}{\sqrt{n}}$
 
-<!-- ```{r} -->
+```{r}
+#| include: false
 
-<!-- #| eval: false -->
+#---CODING ANSWER---
+cells |> 
+  summarise(mean = mean(FSC),
+            meadian = median(FSC),
+            n = length(FSC),
+            standard_dev = sd(FSC),
+            se = standard_dev/sqrt(n))
+```
 
-<!-- ?geom_col -->
+### Means of counts
 
-<!-- ``` -->
+Many things are quite difficult to measure or count and in these cases we often do **technical replicates**. A technical replicate allows us the measure the exact same thing to check how variable the measurement process is. For example, *Drosophila* are small and counting their sternopleural bristles is tricky. In addition, where a bristle is short (young) or broken scientists might vary in whether they count it. Or people or machines might vary in measuring the concentration of the same solution. 
 
-<!-- The manual page has several sections. -->
+When we do technical replicates we calculate their mean and use that as the measure. This is what is in our `fly_bristles_means` dataframe - the bristles of each of the 96 flies was counted by 5 people and the data are those means. These has an impact on how we plot and summarise the dataset because the distribution of mean counts is continuous! We can use means, standard deviations and histograms. This will be an exercise in [Consolidate](study_after_workshop.qmd). 
 
-<!-- -   **Description** an overview of what the command does\ -->
 
-<!-- -   **Usage** lists arguments -->
+## Look after future you!
 
-<!--     -   form: argument name = default value\ -->
-
-<!--     -   some arguments MUST be supplied others have defaults -->
-
-<!--     -   `...` means etc and includes arguments that can be passed to many 'geoms' -->
-
-<!-- -   **Arguments** gives the detail about the arguments -->
-
-<!-- -   **Details** describes how the command works in more detail\ -->
-
-<!-- -   **Value** gives the output of the command -->
-
-<!-- -   Don't be too perturbed by not fully understanding the information -->
-
-<!-- ## Customising the plot -->
-
-<!-- ![](images/do_in_R.png) Change the fill of the bars using `fill`: -->
-
-<!-- ```{r} -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(fill = "lightblue") -->
-
-<!-- ``` -->
-
-<!-- Colours can be given by their name, "lightblue" or code, "#ADD8E6". -->
-
-<!-- Look up by [name](assets/colournames.pdf) or [code](assets/colourhex.pdf) -->
-
-<!-- ![](images/do_in_R.png) Change the bars to a colour you like. -->
-
-<!-- `fill` is one of the arguments covered by `...`. `fill` is an 'aesthetic'. If you look for `...` in the list of arguments you will see it says: -->
-
-<!-- > Other arguments passed on to layer(). These are often aesthetics, used to set an aesthetic to a fixed value, like colour = "red" or size = 3. They may also be parameters to the paired geom/stat. -->
-
-<!-- We just set the \`fill\` aesthetic to a fixed value. -->
-
-<!-- Further down the manual, there is a section on **Aesthetics** which lists those understood by `geom_col()` -->
-
-<!-- We can set (map) the `fill` aesthetic to a fixed colour inside `geom_col()` *or* map it to a variable from the dataframe inside the `aes()` instead. This means the colour will be different for different values in that variable. -->
-
-<!-- ![](images/do_in_R.png) Map the `fill` aesthetic to the `coat` variable: -->
-
-<!-- ```{r} -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq, fill = coat)) + -->
-
-<!--   geom_col() -->
-
-<!-- ``` -->
-
-<!-- Note that we have taken `fill = "lightblue"` out of the `geom_col()` and instead put `fill = coat` in the `aes()`. -->
-
-<!-- ![](images/do_in_R.png) Use the manual to put the bars next to each other. Look for the argument that will mean there is no space between the bars. -->
-
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- #---CODING ANSWER--- -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(fill = "lightblue", width = 1) -->
-
-<!-- ``` -->
-
-<!-- ![](images/do_in_R.png) Use the manual to change the colour of the lines around each bar to black. -->
-
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- #---CODING ANSWER--- -->
-
-<!-- ggplot(data = coat_data, -->
-
-<!--        aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(fill = "lightblue",  -->
-
-<!--            width = 1,  -->
-
-<!--            colour = "black") -->
-
-<!-- ``` -->
-
-<!-- We can make changes to the axes using: -->
-
-<!-- -   Changes to a discrete x axis: `scale_x_discrete()` -->
-
-<!-- -   Changes to a continuous y axis: `scale_y_continuous()` -->
-
-<!-- `ggplot` automatically extends the axes slightly. You can turn this behaviour off with the `expand` argument in `scale_x_discrete()` and `scale_y_continuous()`.[^1] -->
-
-<!-- ![](images/do_in_R.png) Remove the gap between the axes and the data: -->
-
-<!-- ```{r} -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(fill = "lightblue",  -->
-
-<!--            width = 1,  -->
-
-<!--            colour = "black") + -->
-
-<!--   scale_x_discrete(expand = c(0, 0)) +  -->
-
-<!--   scale_y_continuous(expand = c(0, 0))  -->
-
-<!-- ``` -->
-
-<!-- Each 'layer' is added to the ggplot() command with a `+` -->
-
-<!-- ::: callout-tip -->
-
-<!-- ## Top Tip -->
-
-<!-- Make your code easier to read by using white space and new lines -->
-
-<!-- -   put spaces around `=` , `->` and after `,` -->
-
-<!-- -   use a newline after every comma in a command with lots of arguments -->
-
-<!-- ::: -->
-
-<!-- ![](images/do_in_R.png) Look up `scale_x_discrete` in the manual and work out how to change the axis title from "coat" to "Coat colour". Also change the *y*-axis title. -->
-
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- #---CODING ANSWER--- -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(fill = "lightblue",  -->
-
-<!--            width = 1,  -->
-
-<!--            colour = "black") + -->
-
-<!--   scale_x_discrete(expand = c(0, 0), -->
-
-<!--                    name = "Coat colour") +  -->
-
-<!--   scale_y_continuous(expand = c(0, 0), -->
-
-<!--                      name = "Number of cats")  -->
-
-<!-- ``` -->
-
-<!-- ![](images/do_in_R.png) I would prefer to see the *y*-axis extend a little beyond the data and we can change the axis "limits" in the `scale_y_continuous()` -->
-
-<!-- ```{r} -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(fill = "lightblue",  -->
-
-<!--            width = 1,  -->
-
-<!--            colour = "black") + -->
-
-<!--   scale_x_discrete(expand = c(0, 0), -->
-
-<!--                    name = "Coat colour") +  -->
-
-<!--   scale_y_continuous(expand = c(0, 0), -->
-
-<!--                      name = "Number of cats", -->
-
-<!--                      limits = c(0, 25))  -->
-
-<!-- ``` -->
-
-<!-- The grey grid background is useful for examining plots on a screen but for a report of publication you will want a more scientific style. Every aspect of the "theme" of a plot - the non-data elements such as fonts, background colours, axis line colours etc - can be controlled individually[^2] but there are some handy built in themes that apply several changes at once. One of these is `theme_classic()` -->
-
-<!-- ![](images/do_in_R.png) Add `theme_classic()` to the plot: -->
-
-<!-- ```{r} -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(width = 1,  -->
-
-<!--            colour = "black", -->
-
-<!--            fill = "lightblue") + -->
-
-<!--   scale_x_discrete(expand = c(0, 0), -->
-
-<!--                    name = "Coat colour") +  -->
-
-<!--   scale_y_continuous(expand = c(0, 0), -->
-
-<!--                      name = "Number of cats", -->
-
-<!--                      limits = c(0, 25)) + -->
-
-<!--   theme_classic() -->
-
-<!-- ``` -->
-
-<!-- The default ordering of a categorical variable like `coat` is alphabetical. Often we want to change the order. For example, you might want a "Control" on the left or the categories might have an inherent order (e.g., small, medium and large). We can alter (`mutate`) the `coat` variable using `fct_relevel()`. -->
-
-<!-- ![](images/do_in_R.png) Make "white" the first category: -->
-
-<!-- ```{r} -->
-
-<!-- coat_data <- coat_data |>  -->
-
-<!--   mutate(coat = fct_relevel(coat, "white")) -->
-
-<!-- ``` -->
-
-<!-- ::: callout-note -->
-
-<!-- ## The pipe `|>` -->
-
-<!-- `|>` is called the "pipe". A keyboard shortcut is Control+Shift+M -->
-
-<!-- The pipe puts the output of one command (one the left) as input to another command (on the right). It can be read as "and then". You will more about it next week. -->
-
-<!-- ::: -->
-
-<!-- ![](images/do_in_R.png) Now plot again. -->
-
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- ggplot(data = coat_data, aes(x = coat, y = freq)) + -->
-
-<!--   geom_col(width = 1,  -->
-
-<!--            colour = "black", -->
-
-<!--            fill = "lightblue") + -->
-
-<!--   scale_x_discrete(expand = c(0, 0), -->
-
-<!--                    name = "Coat colour") +  -->
-
-<!--   scale_y_continuous(expand = c(0, 0), -->
-
-<!--                      name = "Number of cats", -->
-
-<!--                      limits = c(0, 25)) + -->
-
-<!--   theme_classic() -->
-
-<!-- ``` -->
-
-<!-- If you wanted white and then ginger you would do `fct_relevel(coat, c("white", "ginger")` -->
-
-<!-- We can also order the categories by the values in another variable by using `reorder()` in the plot code. -->
-
-<!-- ![](images/do_in_R.png) Reorder the categories in `coat` by the the value in `freq`: -->
-
-<!-- ```{r} -->
-
-<!-- ggplot(data = coat_data,  -->
-
-<!--        aes(x = reorder(coat, freq, decreasing = TRUE),  -->
-
-<!--            y = freq)) + -->
-
-<!--   geom_col(width = 1,  -->
-
-<!--            colour = "black", -->
-
-<!--            fill = "lightblue") + -->
-
-<!--   scale_x_discrete(expand = c(0, 0), -->
-
-<!--                    name = "Coat colour") +  -->
-
-<!--   scale_y_continuous(expand = c(0, 0), -->
-
-<!--                      name = "Number of cats", -->
-
-<!--                      limits = c(0, 25)) + -->
-
-<!--   theme_classic() -->
-
-<!-- ``` -->
+Future you is going to summarise and plot data from the "River practicals". You can make this much easier by documenting what you have done now. At the moment all of your code from this workshop is in a single file, probably called `analysis.R`. I recommend making a new script for each of nominal, continuous and count data and copying the code which imports, summarises and plots it. This will make it easier for future you to find the code you need. Here is an example: [nominal_data.R](assets/nominal_data.R). You may wish to comment your version much more.
 
 You're finished!
 
@@ -604,7 +415,7 @@ You're finished!
 
 These contain all the code needed in the workshop even where it is not visible on the webpage.
 
-The [.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-7/workshop.qmd).
+The [.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-8/workshop.qmd). Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---CODING ANSWER---`
 
 Pages made with Quarto [@allaire2022]
 
