--- a/r4babs1/week-8/study_after_workshop.qmd
+++ b/r4babs1/week-8/study_after_workshop.qmd
@@ -1,43 +1,81 @@
 ---
 title: "Independent Study - after the workshop"
+execute: 
+  echo: false
+  include: false
 ---
 
-
-### means of counts
-
-![](images/do_in_R.png) Summarise the `fly_bristles_means` dataframe by calculating the mean, median, sample size and standard deviation of `mean_count`. 
+### Means of counts
 
 ```{r}
-#| include: false
+# set up
+# pkgs
+library(tidyverse)
+library(readxl)
 
-#---CODING ANSWER---
-cells |> 
-  summarise(mean = mean(FSC),
-            meadian = median(FSC),
-            n = length(FSC),
-            standard_dev = sd(FSC))
+# import files used in the homework
+fly_bristles_means <- read_excel("data-raw/bristles-mean.xlsx")
+cats <- read_csv("data-raw/cat-coats.csv")
 ```
 
-![](images/do_in_R.png) Create an appropriate plot of `fly_bristles_means` dataframe by calculating the mean, median, sample size and standard deviation of `mean_count`. 
-
-
-
-formatting graphs from last week: axis, order of bars, colour of bars
-
-
+1.  💻 Summarise the `fly_bristles_means` dataframe by calculating the mean, median, sample size, standard deviation and standard error of the `mean_count` variable.
 
 ```{r}
+#| code-fold: true
+fly_bristles_means |> 
+  summarise(mean = mean(mean_count),
+            median = median(mean_count),
+            n = length(mean_count),
+            standard_dev = sd(mean_count),
+            standard_error = standard_dev / sqrt(n))
+```
+
+2.  💻 Create an appropriate plot to show the distribution of `mean_count` in `fly_bristles_means`
+
+```{r}
+#| code-fold: true
+
+ggplot(fly_bristles_means, aes(x = mean_count)) +
+  geom_histogram(bins = 10)
+```
+
+3.  💻 Can you format the plot 2. by removing the grey background, giving the bars a black outline and the fill colour of your choice and improving the axis format and labelling? You may want to refer to [last week's workshop](r4babs1/week-7/workshop.html).
+
+```{r}
+#| code-fold: true
+
+ggplot(fly_bristles_means, aes(x = mean_count)) +
+  geom_histogram(bins = 10, 
+                 colour = "black",
+                 fill = "skyblue") +
+  scale_x_continuous(name = "Number of bristles",
+                     expand = c(0, 0)) +
+  scale_y_continuous(name = "Frequency",
+                     expand = c(0, 0),
+                     limits = c(0, 35)) +
+  theme_classic()
+```
+
+4.  💻 Amend this code to change the order of the bars by the average mass of each coat colour? [Changing the order of bars](r4babs1/week-7/workshop.html#changing-the-order-of-bars) was covered last week. You may also want to practice formatting the graph nicely.
+
+```{r}
+#| echo: true
+#| include: true
+
 ggplot(cats, aes(x = coat, y = mass)) +
   geom_boxplot()
 ```
 
-[Changing the order of bars](r4babs1/week-7/workshop.html#changing-the-order-of-bars) from last week.
-
 ```{r}
-ggplot(cats, aes(x = reorder(coat, mass), y = mass)) +
-  geom_boxplot()
+#| code-fold: true
+ggplot(cats, 
+       aes(x = reorder(coat, mass), y = mass)) +
+  geom_boxplot(fill = "darkcyan") +
+  scale_x_discrete(name = "Coat colour") +
+  scale_y_continuous(name = "Mass (kg)", 
+                     expand = c(0, 0),
+                     limits = c(0, 8)) +
+  theme_classic()
 ```
 
-
-## the pipe: more on understanding it
-barplot with the pipe when to use it or not in plotting
+4.  📖 Read [Understanding the pipe `|>`](https://3mmarand.github.io/comp4biosci/workflow_rstudio.html)
