--- a/r4babs1/week-7/workshop.qmd
+++ b/r4babs1/week-7/workshop.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to RStudio and your first graphs"
 toc: true
-toc-location: left
+toc-location: right
 ---
 
 ```{r}
@@ -473,7 +473,7 @@ You're finished!
 
 These contain all the code needed in the workshop even where it is not visible on the webpage.
 
-The [.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-7/workshop.qmd).Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---CODING ANSWER---`
+The [workshop.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-7/workshop.qmd).Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---CODING ANSWER---`
 
 Pages made with Quarto [@allaire2022]
 
